<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tarea.erick.calcled.MainActivity">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="3dp"
        android:layout_margin="3dp"
        >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/textView1"  />

        <EditText
            android:id="@+id/Vs"
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:layout_marginBottom="3dp" />
        <requestFocus />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/textView2" />

        <EditText
            android:id="@+id/Vf"
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"

            android:layout_marginBottom="3dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/textView3" />

        <EditText
            android:id="@+id/mA"
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"

            android:layout_marginBottom="3dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/textView4"
            android:layout_marginTop="50dp"/>

        <EditText
            android:id="@+id/Ohms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:inputType="numberDecimal"
            android:ems="12"
            />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/textView5" />

        <EditText
            android:id="@+id/w"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:ems="12"
            android:inputType="numberDecimal"/>

        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal|bottom"
            android:layout_marginTop="25dp"
            >

            <Button
                android:id="@+id/clean"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:hint="@string/clean" />

            <Button
                android:id="@+id/ok"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:hint="@string/ok" />

        </LinearLayout>


    </LinearLayout>


</android.support.constraint.ConstraintLayout>
